fix: more consistent zoom in and out with overflow

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -5,9 +5,15 @@
 body {
     font-family: 'Quicksand', sans-serif;
 }
+.calculator-zoom {
+  display: inline-block;          
+  transform-origin: top left; 
+  transition: transform 0.2s ease;
+}
 
 div.glass{
     display: flex;
+    gap:16px;
     justify-content: space-evenly;
     align-items: flex-start;
             /* border: dashed blue 1px; */
@@ -16,6 +22,7 @@ div.glass{
     /* gap: 16px; */
     min-height: 100vh;
     flex-wrap: wrap;
+    overflow: auto;
 }
 
 button {
@@ -107,7 +114,6 @@ div.left {
 div.background {
     /* border:darkblue solid 1px; */
     display:flex;
-    transition: transform 0.2s ease;
     flex:0;
     max-width: fit-content;
     flex-direction: column;
